# pytket-qirpass

./: README.md  pyproject.toml
src/pytket_qirpass/: __init__.py  apply_qirpass.py
test/: test_qirpass.py
test/qir/batch_2/: XX_recursion_limit8.ll  gate_stress_test.ll  gate_stress_test_10k.ll  gate_stress_test_10qb.ll  gate_stress_test_10qb_10k.ll  gate_stress_test_15k.ll  gate_stress_test_25k.ll  gate_stress_test_25k_.ll
