[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytket-qirpass"
authors = [{name = "Alec Edgington", email = "alec.edgington@quantinuum.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/CQCL/pytket-qirpass"
